# inc_daal

./: .bazelrc  .gitignore  BUILD  MODULE.bazel  versions.json
.devcontainer/: devcontainer.json
.github/: .templatesyncignore  CODEOWNERS
.github/actions/gitlint/: action.yml
.github/workflows/: build_and_test.yml  build_and_test_host_gcc.yml  codeql.yml  template_sync.yml
bazel/patches/: communication_add_platforms.patch
examples/: BUILD
examples/af-hello-world/: hello_world_app.hpp  main.cpp
examples/daal/af/score/: mw_com_common.cpp  mw_com_common.hpp  mw_log_common.cpp  mw_log_common.hpp  score_exec_env.hpp
examples/iohandler-score-mw-com/: BUILD
examples/iohandler-score-mw-com/adas-vehicle-control/: main_vehicle_control_app.cpp  vehicle_control_app.cpp  vehicle_control_app.hpp
examples/iohandler-score-mw-com/adas-vehicle-control/io/: steering_wheel_client.hpp  vehicle_control_io_container.hpp
examples/iohandler-score-mw-com/adas-vehicle-control/test/: main_vehicle_control_stub.cpp  steering_wheel_client_stub.hpp
examples/iohandler-score-mw-com/etc/: mw_com_config.json
examples/iohandler-score-mw-com/spec/: steering_request.hpp
examples/iohandler-score-mw-com/spec/impl/: score_mw_com.hpp
examples/iohandler-score-mw-com/steering-wheel/: main_steering_wheel_app.cpp  steering_wheel_app.cpp  steering_wheel_app.hpp
examples/iohandler-score-mw-com/steering-wheel/io/: steering_wheel_io_container.hpp  steering_wheel_server.hpp
examples/log-basics/: main.cpp
main/: index.html
pr-1/: genindex.html  index.html  search.html
pr-2/: genindex.html  index.html  search.html
src/: BUILD
src/config/debug/: config.hpp
src/config/production/: config.hpp
src/daal/af/app_base/: iohandler.hpp  safe_application_base.hpp
src/daal/af/app_handler/: iapplication_handler.hpp
src/daal/af/checkpoint/: README.md  icheckpoint.hpp  icheckpoint_container.hpp  when.hpp
src/daal/af/env/: execution_environment.hpp
src/daal/af/exe/: iexecutor.hpp
src/daal/af/os/: posix_helper.hpp  posix_wrapper.hpp
src/daal/af/runtime_statistics/: reporting_backend.hpp  runtime_statistics.cpp  runtime_statistics.hpp  time_provider.hpp
src/daal/af/std/: override_allocate_exception.cpp  override_allocate_exception.h  override_terminate.cpp  override_terminate.hpp
src/daal/af/trigger/: trigger.hpp  trigger_activation.hpp  trigger_condition.hpp
src/daal/af/worker/: linux_impl.cpp  qnx_impl.cpp  worker_thread.cpp  worker_thread.hpp
src/daal/log/: framework_logger.hpp  logger.cpp  logger.hpp  logger_types.hpp  sink.cpp  sink.hpp
src/examples/: BUILD  main.cpp  test.cpp
src/examples/company/: BUILD  company.cpp
src/examples/department/: BUILD  department.cpp
tests/: BUILD
tests/app_handler/: test_fork_join_module_handler.cpp  test_iterative_application_handler.cpp  test_simple_application_handler.cpp
tests/checkpoint/: test_checkpoint.cpp
tests/env/: test_simple_signal_handler.cpp
tests/example_app/: test_simple_app_main.cpp
tests/exe/: checkpoint_mock.hpp  qnx_os_mock.hpp  test_executor.cpp  test_executor_builder.cpp  trigger_mock.hpp
tests/mocks/helper/: fake_object.h
tests/os/: test_os_wraper_impl.cpp  test_qnx_os_helper.cpp
tests/std/: test_mem_alloc_crash.cpp  test_mem_alloc_override.cpp  test_override_terminate.cpp
tests/trigger/: test_daal_steady_clock.cpp  test_null_triger_condition.cpp  test_periodic_activation.cpp  test_periodic_trigger.cpp
tests/worker/: test_worker_thread.cpp
(+67 files in other folders)
